1, modify the tool's source code. 2, modify the CMakeList for the library.

--- a/tool/CMakeLists.txt
+++ b/tool/CMakeLists.txt
@@ -5,10 +5,10 @@ project( telemetry )
 include_directories ("${PROJECT_SOURCE_DIR}/../library")
 link_directories("${PROJECT_SOURCE_DIR}/../build/lib")
 
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11")
 
 add_executable( telemetry telemetry.cpp )
 
 set_target_properties(telemetry PROPERTIES LINKER_LANGUAGE CXX)
 
-target_link_libraries( telemetry tele)
+target_link_libraries( telemetry intem)
